# Mega-prosjekt_Gruppe_156

./: LICENSE  README.md
cube_pointer_robot/: package.xml  setup.cfg  setup.py~
cube_pointer_robot/bringup/launch/: camera_system.launch.py
cube_pointer_robot/camera_node/: camera_node.py
src/bringup/: main_launch.py
src/camera_description/: package.xml  setup.cfg  setup.py
src/camera_description/urdf/: camera.macro.xacro
src/camera_node/: package.xml  setup.cfg  setup.py
src/camera_node/camera_node/: box_detection_node.py  camera_debug_node.py  coordinator_test_node.py
src/camera_node/launch/: box_detection.launch.py
src/cube_pointer_robot/: package.xml  setup.py
src/cube_pointer_robot/bringup/launch/: box_detection.launch.py
src/cube_pointer_robot/camera_node/: coordinator_node.py
src/cube_pointer_robot/cube_pointer_robot/camera_node/: box_detection_node.py  camera_node.py  (+2 more)
src/hello_moveit/: package.xml
src/hello_moveit/src/: .hello_moveit.cpp.swp
src/object_reference_msg/: CMakeLists.txt  package.xml
src/object_reference_msg/srv/: ObjectReference.srv
src/robot_bringup/: package.xml  setup.py
src/robot_bringup/launch/: main.launch.py
src/robot_moveit/: CMakeLists.txt  package.xml
src/robot_moveit/include/: CameraBracket.hpp  PathPlanning.hpp  PlanningExecute.hpp  Static_pos.hpp  objectPosService.hpp  referencePosition.cpp  referencePosition.hpp  staticPositions.cpp  staticPositions.h  staticPositions.hpp
src/robot_moveit/launch/: robot_moveit.launch.py
src/robot_moveit/src/: .robot_moveit.cpp.swp  robot_moveit.cpp
(+6 files in other folders)
